prisma 2 case skins config

--- a/addons/sourcemod/configs/weapons/weapons_bulgarian.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_bulgarian.cfg
@@ -1,5 +1,90 @@
 "Skins"
 {
+	"Bullet Queen"
+	{
+		"index"		"957"
+		"classes"	"weapon_glock;"
+	}
+	"Fever Dream"
+	{
+		"index"		"956"
+		"classes"	"weapon_ssg08;"
+	}
+	"Darkwing"
+	{
+		"index"		"955"
+		"classes"	"weapon_sg556;"
+	}
+	"Enforcer"
+	{
+		"index"		"954"
+		"classes"	"weapon_scar20;"
+	}
+	"Apocalypto"
+	{
+		"index"		"953"
+		"classes"	"weapon_sawedoff;"
+	}
+	"Bone Forged"
+	{
+		"index"		"952"
+		"classes"	"weapon_revolver;"
+	}
+	"Acid Etched"
+	{
+		"index"		"951"
+		"classes"	"weapon_hkp2000;"
+	}
+	"Prototype"
+	{
+		"index"		"950"
+		"classes"	"weapon_negev;"
+	}
+	"Desert Strike"
+	{
+		"index"		"949"
+		"classes"	"weapon_mp5sd;"
+	}
+	"Justice"
+	{
+		"index"		"948"
+		"classes"	"weapon_mag7;"
+	}
+	"Disco Tech"
+	{
+		"index"		"947"
+		"classes"	"weapon_mac10;"
+	}
+	"Player Two"
+	{
+		"index"		"946"
+		"classes"	"weapon_m4a1_silencer;"
+	}
+	"Blue Ply"
+	{
+		"index"		"945"
+		"classes"	"weapon_deagle;"
+	}
+	"Distressed"
+	{
+		"index"		"944"
+		"classes"	"weapon_cz75a;"
+	}
+	"Capillary"
+	{
+		"index"		"943"
+		"classes"	"weapon_awp;"
+	}
+	"Tom Cat"
+	{
+		"index"		"942"
+		"classes"	"weapon_aug;"
+	}
+	"Phantom Disruptor"
+	{
+		"index"		"941"
+		"classes"	"weapon_ak47;"
+	}
 	"Честване"
 	{
 		"index"		"919"
@@ -85,87 +170,87 @@
 		"index"		"902"
 		"classes"	"weapon_m249;"
 	}
-	"Warbird"
+	"Бойна птичка"
 	{
 		"index"		"900"
 		"classes"	"weapon_m249;"
 	}
-	"Bloodshot"
+	"Кървясало"
 	{
 		"index"		"899"
 		"classes"	"weapon_ssg08;"
 	}
-	"Stalker"
+	"Дебнещ"
 	{
 		"index"		"898"
 		"classes"	"weapon_mac10;"
 	}
-	"Colony IV"
+	"Колония IV"
 	{
 		"index"		"897"
 		"classes"	"weapon_sg556;"
 	}
-	"Torn"
+	"Разкъсано"
 	{
 		"index"		"896"
 		"classes"	"weapon_scar20;"
 	}
-	"Balance"
+	"Баланс"
 	{
 		"index"		"895"
 		"classes"	"weapon_elite;"
 	}
-	"Obsidian"
+	"Обсидиан"
 	{
 		"index"		"894"
 		"classes"	"weapon_hkp2000;"
 	}
-	"Neon Ply"
+	"Неонов пласт"
 	{
 		"index"		"893"
 		"classes"	"weapon_mp7;"
 	}
-	"Memento"
+	"Спомен"
 	{
 		"index"		"892"
 		"classes"	"weapon_revolver;"
 	}
-	"Black Sand"
+	"Черен пясък"
 	{
 		"index"		"891"
 		"classes"	"weapon_g3sg1;"
 	}
-	"Plume"
+	"Перушина"
 	{
 		"index"		"890"
 		"classes"	"weapon_nova;"
 	}
-	"Decimator"
+	"Погубващия"
 	{
 		"index"		"889"
 		"classes"	"weapon_tec9;"
 	}
-	"Acid Wash"
+	"Киселинно размиване"
 	{
 		"index"		"888"
 		"classes"	"weapon_mp5sd;"
 	}
-	"Containment Breach"
+	"Изолационен пробив"
 	{
 		"index"		"887"
 		"classes"	"weapon_awp;"
 	}
-	"Arctic Wolf"
+	"Арктически вълк"
 	{
 		"index"		"886"
 		"classes"	"weapon_aug;"
 	}
-	"Rat Rod"
+	"Таратайка"
 	{
 		"index"		"885"
 		"classes"	"weapon_ak47;"
 	}
-	"Embargo"
+	"Ембарго"
 	{
 		"index"		"884"
 		"classes"	"weapon_bizon;"
@@ -375,87 +460,87 @@
 		"index"		"801"
 		"classes"	"weapon_ak47;"
 	}
-	"Night Borre"
+	"Нощен Бор"
 	{
 		"index"		"863"
 		"classes"	"weapon_famas;"
 	}
-	"Moss Quartz"
+	"Мъхест кварц"
 	{
 		"index"		"862"
 		"classes"	"weapon_m4a1_silencer;"
 	}
-	"Barricade"
+	"Барикада"
 	{
 		"index"		"861"
 		"classes"	"weapon_sg556;"
 	}
-	"Pyre"
+	"Погребална клада"
 	{
 		"index"		"860"
 		"classes"	"weapon_elite;"
 	}
-	"Emerald Quartz"
+	"Изумруден кварц"
 	{
 		"index"		"859"
 		"classes"	"weapon_cz75a;"
 	}
-	"Mjölnir"
+	"Мьолнир"
 	{
 		"index"		"763"
 		"classes"	"weapon_negev;"
 	}
-	"Red Stone"
+	"Червен камък"
 	{
 		"index"		"762"
 		"classes"	"weapon_ssg08;"
 	}
-	"Copper Borre"
+	"Меден Бор"
 	{
 		"index"		"761"
 		"classes"	"weapon_mac10;"
 	}
-	"Frost Borre"
+	"Мразовит Бор"
 	{
 		"index"		"760"
 		"classes"	"weapon_xm1014;"
 	}
-	"Astral Jörmungandr"
+	"Астрален Йормунганд"
 	{
 		"index"		"759"
 		"classes"	"weapon_p90;"
 	}
-	"Flame Jörmungandr"
+	"Пламенният Йормунганд"
 	{
 		"index"		"758"
 		"classes"	"weapon_aug;"
 	}
-	"Emerald Jörmungandr"
+	"Изумруденият Йормунганд"
 	{
 		"index"		"757"
 		"classes"	"weapon_deagle;"
 	}
-	"Gungnir"
+	"Гунгнир"
 	{
 		"index"		"756"
 		"classes"	"weapon_awp;"
 	}
-	"Boroque Sand"
+	"Бароков пясък"
 	{
 		"index"		"920"
 		"classes"	"weapon_negev;"
 	}
-	"Stained Glass"
+	"Витраж"
 	{
 		"index"		"867"
 		"classes"	"weapon_mp9;"
 	}
-	"Canal Spray"
+	"Канален спрей"
 	{
 		"index"		"866"
 		"classes"	"weapon_revolver;"
 	}
-	"Stone Mosaico"
+	"Каменна мозайка"
 	{
 		"index"		"865"
 		"classes"	"weapon_scar20;"
@@ -465,57 +550,57 @@
 		"index"		"864"
 		"classes"	"weapon_sg556;"
 	}
-	"Baroque Orange"
+	"Бароково оранжево"
 	{
 		"index"		"746"
 		"classes"	"weapon_nova;"
 	}
-	"Baroque Purple"
+	"Бароково лилаво"
 	{
 		"index"		"745"
 		"classes"	"weapon_ak47;"
 	}
-	"Baroque Red"
+	"Бароково червено"
 	{
 		"index"		"744"
 		"classes"	"weapon_p90;"
 	}
-	"Orange Filigree"
+	"Оранжев филигран"
 	{
 		"index"		"743"
 		"classes"	"weapon_ssg08;"
 	}
-	"Red Filigree"
+	"Червен филигран"
 	{
 		"index"		"742"
 		"classes"	"weapon_mac10;"
 	}
-	"Dark Filigree"
+	"Мрачен филигран"
 	{
 		"index"		"741"
 		"classes"	"weapon_p250;"
 	}
-	"Navy Murano"
+	"Тъмносиньо Мурано"
 	{
 		"index"		"740"
 		"classes"	"weapon_aug;"
 	}
-	"Violet Murano"
+	"Виолетово Мурано"
 	{
 		"index"		"739"
 		"classes"	"weapon_g3sg1;"
 	}
-	"Orange Murano"
+	"Оранжево Мурано"
 	{
 		"index"		"738"
 		"classes"	"weapon_tec9;"
 	}
-	"Cinquedea"
+	"Чинкуеда"
 	{
 		"index"		"737"
 		"classes"	"weapon_mag7;"
 	}
-	"The Prince"
+	"Принцът"
 	{
 		"index"		"736"
 		"classes"	"weapon_awp;"
@@ -525,82 +610,82 @@
 		"index"		"873"
 		"classes"	"weapon_bizon;"
 	}
-	"Bamboo Garden"
+	"Бамбукова градина"
 	{
 		"index"		"872"
 		"classes"	"weapon_mp5sd;"
 	}
-	"Surfwood"
+	"Дърво за сърф"
 	{
 		"index"		"871"
 		"classes"	"weapon_mac10;"
 	}
-	"Jungle Thicket"
+	"Джунглов гъсталак"
 	{
 		"index"		"870"
 		"classes"	"weapon_sawedoff;"
 	}
-	"Sundown"
+	"Залез-слънце"
 	{
 		"index"		"869"
 		"classes"	"weapon_famas;"
 	}
-	"Sea Calico"
+	"Морски басмен"
 	{
 		"index"		"868"
 		"classes"	"weapon_ssg08;"
 	}
-	"Wild Lily"
+	"Дива лилия"
 	{
 		"index"		"734"
 		"classes"	"weapon_mp9;"
 	}
-	"Rust Leaf"
+	"Ръждясало листо"
 	{
 		"index"		"733"
 		"classes"	"weapon_tec9;"
 	}
-	"Synth Leaf"
+	"Синтетично листо"
 	{
 		"index"		"732"
 		"classes"	"weapon_glock;"
 	}
-	"Banana Leaf"
+	"Бананово листо"
 	{
 		"index"		"731"
 		"classes"	"weapon_xm1014;"
 	}
-	"Dark Blossom"
+	"Мрачно разцъфтяване"
 	{
 		"index"		"730"
 		"classes"	"weapon_m4a1;"
 	}
-	"Crimson Blossom"
+	"Пурпурно разцъфтяване"
 	{
 		"index"		"729"
 		"classes"	"weapon_fiveseven;"
 	}
-	"Teal Blossom"
+	"Синкавозелено разцъфтяване"
 	{
 		"index"		"728"
 		"classes"	"weapon_mp7;"
 	}
-	"Midnight Lily"
+	"Среднощна лилия"
 	{
 		"index"		"727"
 		"classes"	"weapon_aug;"
 	}
-	"Sunset Lily"
+	"Оранжева лилия"
 	{
 		"index"		"726"
 		"classes"	"weapon_p90;"
 	}
-	"Day Lily"
+	"Дневна лилия"
 	{
 		"index"		"725"
 		"classes"	"weapon_ump45;"
 	}
-	"Wild Lotus"
+	"Див лотос"
 	{
 		"index"		"724"
 		"classes"	"weapon_ak47;"
@@ -2850,7 +2935,7 @@
 		"index"		"305"
 		"classes"	"weapon_aug;"
 	}
-	"Разкъсано"
+	"Разсечено"
 	{
 		"index"		"304"
 		"classes"	"weapon_ssg08;"
