--- a/addons/sourcemod/configs/weapons/weapons_finnish.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_finnish.cfg
@@ -1,21 +1,106 @@
 "Skins"
 {
-	"Commemoration"
+	"Bullet Queen"
+	{
+		"index"		"957"
+		"classes"	"weapon_glock;"
+	}
+	"Fever Dream"
+	{
+		"index"		"956"
+		"classes"	"weapon_ssg08;"
+	}
+	"Darkwing"
+	{
+		"index"		"955"
+		"classes"	"weapon_sg556;"
+	}
+	"Enforcer"
+	{
+		"index"		"954"
+		"classes"	"weapon_scar20;"
+	}
+	"Apocalypto"
+	{
+		"index"		"953"
+		"classes"	"weapon_sawedoff;"
+	}
+	"Bone Forged"
+	{
+		"index"		"952"
+		"classes"	"weapon_revolver;"
+	}
+	"Acid Etched"
+	{
+		"index"		"951"
+		"classes"	"weapon_hkp2000;"
+	}
+	"Prototype"
+	{
+		"index"		"950"
+		"classes"	"weapon_negev;"
+	}
+	"Desert Strike"
+	{
+		"index"		"949"
+		"classes"	"weapon_mp5sd;"
+	}
+	"Justice"
+	{
+		"index"		"948"
+		"classes"	"weapon_mag7;"
+	}
+	"Disco Tech"
+	{
+		"index"		"947"
+		"classes"	"weapon_mac10;"
+	}
+	"Player Two"
+	{
+		"index"		"946"
+		"classes"	"weapon_m4a1_silencer;"
+	}
+	"Blue Ply"
+	{
+		"index"		"945"
+		"classes"	"weapon_deagle;"
+	}
+	"Distressed"
+	{
+		"index"		"944"
+		"classes"	"weapon_cz75a;"
+	}
+	"Capillary"
+	{
+		"index"		"943"
+		"classes"	"weapon_awp;"
+	}
+	"Tom Cat"
+	{
+		"index"		"942"
+		"classes"	"weapon_aug;"
+	}
+	"Phantom Disruptor"
+	{
+		"index"		"941"
+		"classes"	"weapon_ak47;"
+	}
+	"Muistojuhla"
 	{
 		"index"		"919"
 		"classes"	"weapon_famas;"
 	}
-	"Sacrifice"
+	"Uhraus"
 	{
 		"index"		"918"
 		"classes"	"weapon_glock;"
 	}
-	"Wildfire"
+	"Maastopalo"
 	{
 		"index"		"917"
 		"classes"	"weapon_awp;"
 	}
-	"Plastique"
+	"Plastinen"
 	{
 		"index"		"916"
 		"classes"	"weapon_ump45;"
@@ -30,7 +115,7 @@
 		"index"		"914"
 		"classes"	"weapon_scar20;"
 	}
-	"Death by Puppy"
+	"Kuolonpentu"
 	{
 		"index"		"913"
 		"classes"	"weapon_aug;"
@@ -50,7 +135,7 @@
 		"index"		"909"
 		"classes"	"weapon_mag7;"
 	}
-	"Classic Crate"
+	"Klassinen laatikko"
 	{
 		"index"		"908"
 		"classes"	"weapon_mac10;"
@@ -65,12 +150,12 @@
 		"index"		"906"
 		"classes"	"weapon_fiveseven;"
 	}
-	"Flash Out"
+	"Välähdys"
 	{
 		"index"		"905"
 		"classes"	"weapon_tec9;"
 	}
-	"Decommissioned"
+	"Käytöstä poistettu"
 	{
 		"index"		"904"
 		"classes"	"weapon_famas;"
@@ -85,87 +170,87 @@
 		"index"		"902"
 		"classes"	"weapon_m249;"
 	}
-	"Warbird"
+	"Sotalintu"
 	{
 		"index"		"900"
 		"classes"	"weapon_m249;"
 	}
-	"Bloodshot"
+	"Verestävä"
 	{
 		"index"		"899"
 		"classes"	"weapon_ssg08;"
 	}
-	"Stalker"
+	"Vaanija"
 	{
 		"index"		"898"
 		"classes"	"weapon_mac10;"
 	}
-	"Colony IV"
+	"Kolonia IV"
 	{
 		"index"		"897"
 		"classes"	"weapon_sg556;"
 	}
-	"Torn"
+	"Raavittu"
 	{
 		"index"		"896"
 		"classes"	"weapon_scar20;"
 	}
-	"Balance"
+	"Tasapaino"
 	{
 		"index"		"895"
 		"classes"	"weapon_elite;"
 	}
-	"Obsidian"
+	"Laavalasi"
 	{
 		"index"		"894"
 		"classes"	"weapon_hkp2000;"
 	}
-	"Neon Ply"
+	"Neonviilu"
 	{
 		"index"		"893"
 		"classes"	"weapon_mp7;"
 	}
-	"Memento"
+	"Muistoesine"
 	{
 		"index"		"892"
 		"classes"	"weapon_revolver;"
 	}
-	"Black Sand"
+	"Musta hiekka"
 	{
 		"index"		"891"
 		"classes"	"weapon_g3sg1;"
 	}
-	"Plume"
+	"Sulkapeite"
 	{
 		"index"		"890"
 		"classes"	"weapon_nova;"
 	}
-	"Decimator"
+	"Harventaja"
 	{
 		"index"		"889"
 		"classes"	"weapon_tec9;"
 	}
-	"Acid Wash"
+	"Happopesu"
 	{
 		"index"		"888"
 		"classes"	"weapon_mp5sd;"
 	}
-	"Containment Breach"
+	"Pako eristyksestä"
 	{
 		"index"		"887"
 		"classes"	"weapon_awp;"
 	}
-	"Arctic Wolf"
+	"Napasusi"
 	{
 		"index"		"886"
 		"classes"	"weapon_aug;"
 	}
-	"Rat Rod"
+	"Rottakeppi"
 	{
 		"index"		"885"
 		"classes"	"weapon_ak47;"
 	}
-	"Embargo"
+	"Kauppasaarto"
 	{
 		"index"		"884"
 		"classes"	"weapon_bizon;"
@@ -205,7 +290,7 @@
 		"index"		"852"
 		"classes"	"weapon_knife_widowmaker;"
 	}
-	"Nouseva kuu"
+	"Kuutamo"
 	{
 		"index"		"851"
 		"classes"	"weapon_ump45;"
@@ -360,7 +445,7 @@
 		"index"		"804"
 		"classes"	"weapon_mp9;"
 	}
-	"Uus-musta"
+	"Neo-Noir"
 	{
 		"index"		"803"
 		"classes"	"weapon_awp;"
@@ -375,27 +460,27 @@
 		"index"		"801"
 		"classes"	"weapon_ak47;"
 	}
-	"Night Borre"
+	"Öinen Borre-tyyli"
 	{
 		"index"		"863"
 		"classes"	"weapon_famas;"
 	}
-	"Moss Quartz"
+	"Sammaleinen kvartsi"
 	{
 		"index"		"862"
 		"classes"	"weapon_m4a1_silencer;"
 	}
-	"Barricade"
+	"Barrikadi"
 	{
 		"index"		"861"
 		"classes"	"weapon_sg556;"
 	}
-	"Pyre"
+	"Rovio"
 	{
 		"index"		"860"
 		"classes"	"weapon_elite;"
 	}
-	"Emerald Quartz"
+	"Smaragdinvihreä kvartsi"
 	{
 		"index"		"859"
 		"classes"	"weapon_cz75a;"
@@ -405,32 +490,32 @@
 		"index"		"763"
 		"classes"	"weapon_negev;"
 	}
-	"Red Stone"
+	"Punakivi"
 	{
 		"index"		"762"
 		"classes"	"weapon_ssg08;"
 	}
-	"Copper Borre"
+	"Kuparinen Borre-tyyli"
 	{
 		"index"		"761"
 		"classes"	"weapon_mac10;"
 	}
-	"Frost Borre"
+	"Huurteinen Borre-tyyli"
 	{
 		"index"		"760"
 		"classes"	"weapon_xm1014;"
 	}
-	"Astral Jörmungandr"
+	"Astraali-Jörmungandr"
 	{
 		"index"		"759"
 		"classes"	"weapon_p90;"
 	}
-	"Flame Jörmungandr"
+	"Liekehtivä Jörmungandr"
 	{
 		"index"		"758"
 		"classes"	"weapon_aug;"
 	}
-	"Emerald Jörmungandr"
+	"Smaragdinvihreä Jörmungandr"
 	{
 		"index"		"757"
 		"classes"	"weapon_deagle;"
@@ -440,22 +525,22 @@
 		"index"		"756"
 		"classes"	"weapon_awp;"
 	}
-	"Boroque Sand"
+	"Barokkihiekkaa"
 	{
 		"index"		"920"
 		"classes"	"weapon_negev;"
 	}
-	"Stained Glass"
+	"Lasimaalaus"
 	{
 		"index"		"867"
 		"classes"	"weapon_mp9;"
 	}
-	"Canal Spray"
+	"Kanaali"
 	{
 		"index"		"866"
 		"classes"	"weapon_revolver;"
 	}
-	"Stone Mosaico"
+	"Kivimosaiikki"
 	{
 		"index"		"865"
 		"classes"	"weapon_scar20;"
@@ -465,47 +550,47 @@
 		"index"		"864"
 		"classes"	"weapon_sg556;"
 	}
-	"Baroque Orange"
+	"Barokkioranssi"
 	{
 		"index"		"746"
 		"classes"	"weapon_nova;"
 	}
-	"Baroque Purple"
+	"Barokinpurppura"
 	{
 		"index"		"745"
 		"classes"	"weapon_ak47;"
 	}
-	"Baroque Red"
+	"Barokinpunainen"
 	{
 		"index"		"744"
 		"classes"	"weapon_p90;"
 	}
-	"Orange Filigree"
+	"Oranssi filigraani"
 	{
 		"index"		"743"
 		"classes"	"weapon_ssg08;"
 	}
-	"Red Filigree"
+	"Punainen filigraani"
 	{
 		"index"		"742"
 		"classes"	"weapon_mac10;"
 	}
-	"Dark Filigree"
+	"Tumma filigraani"
 	{
 		"index"		"741"
 		"classes"	"weapon_p250;"
 	}
-	"Navy Murano"
+	"Laivastonsininen Murano"
 	{
 		"index"		"740"
 		"classes"	"weapon_aug;"
 	}
-	"Violet Murano"
+	"Violetti Murano"
 	{
 		"index"		"739"
 		"classes"	"weapon_g3sg1;"
 	}
-	"Orange Murano"
+	"Oranssi Murano"
 	{
 		"index"		"738"
 		"classes"	"weapon_tec9;"
@@ -515,7 +600,7 @@
 		"index"		"737"
 		"classes"	"weapon_mag7;"
 	}
-	"The Prince"
+	"Prinssi"
 	{
 		"index"		"736"
 		"classes"	"weapon_awp;"
@@ -525,82 +610,82 @@
 		"index"		"873"
 		"classes"	"weapon_bizon;"
 	}
-	"Bamboo Garden"
+	"Bambupuisto"
 	{
 		"index"		"872"
 		"classes"	"weapon_mp5sd;"
 	}
-	"Surfwood"
+	"Ajopuuta"
 	{
 		"index"		"871"
 		"classes"	"weapon_mac10;"
 	}
-	"Jungle Thicket"
+	"Viidakkoryteikkö"
 	{
 		"index"		"870"
 		"classes"	"weapon_sawedoff;"
 	}
-	"Sundown"
+	"Auringonlasku"
 	{
 		"index"		"869"
 		"classes"	"weapon_famas;"
 	}
-	"Sea Calico"
+	"Merellinen kaliko"
 	{
 		"index"		"868"
 		"classes"	"weapon_ssg08;"
 	}
-	"Wild Lily"
+	"Villililja"
 	{
 		"index"		"734"
 		"classes"	"weapon_mp9;"
 	}
-	"Rust Leaf"
+	"Ruostelehdet"
 	{
 		"index"		"733"
 		"classes"	"weapon_tec9;"
 	}
-	"Synth Leaf"
+	"Synteettinen lehti"
 	{
 		"index"		"732"
 		"classes"	"weapon_glock;"
 	}
-	"Banana Leaf"
+	"Banaaninlehti"
 	{
 		"index"		"731"
 		"classes"	"weapon_xm1014;"
 	}
-	"Dark Blossom"
+	"Tumma kukinto"
 	{
 		"index"		"730"
 		"classes"	"weapon_m4a1;"
 	}
-	"Crimson Blossom"
+	"Purppuranpunainen kukinto"
 	{
 		"index"		"729"
 		"classes"	"weapon_fiveseven;"
 	}
-	"Teal Blossom"
+	"Petroolinsininen kukinto"
 	{
 		"index"		"728"
 		"classes"	"weapon_mp7;"
 	}
-	"Midnight Lily"
+	"Keskiyön lilja"
 	{
 		"index"		"727"
 		"classes"	"weapon_aug;"
 	}
-	"Sunset Lily"
+	"Auringonlaskun lilja"
 	{
 		"index"		"726"
 		"classes"	"weapon_p90;"
 	}
-	"Day Lily"
+	"Päivänlilja"
 	{
 		"index"		"725"
 		"classes"	"weapon_ump45;"
 	}
-	"Wild Lotus"
+	"Villi lootus"
 	{
 		"index"		"724"
 		"classes"	"weapon_ak47;"
@@ -695,7 +780,7 @@
 		"index"		"707"
 		"classes"	"weapon_ak47;"
 	}
-	"Ruosteliekki"
+	"Oksidiroihu"
 	{
 		"index"		"706"
 		"classes"	"weapon_xm1014;"
@@ -745,7 +830,7 @@
 		"index"		"697"
 		"classes"	"weapon_mp9;"
 	}
-	"Kamppailu-urheilu"
+	"Verivala"
 	{
 		"index"		"696"
 		"classes"	"weapon_mp7;"
@@ -915,7 +1000,7 @@
 		"index"		"664"
 		"classes"	"weapon_m4a1;"
 	}
-	"Briiffaus"
+	"Käskynjako"
 	{
 		"index"		"663"
 		"classes"	"weapon_m4a1_silencer;"
@@ -1005,7 +1090,7 @@
 		"index"		"646"
 		"classes"	"weapon_fiveseven;"
 	}
-	"Hapettunut"
+	"Oksidiroihu"
 	{
 		"index"		"645"
 		"classes"	"weapon_deagle;"
@@ -3815,7 +3900,7 @@
 		"index"		"44"
 		"classes"	"weapon_fiveseven;weapon_ak47;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
-	"Tahrainen"
+	"Värjäytynyt"
 	{
 		"index"		"43"
 		"classes"	"weapon_elite;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
