--- a/addons/sourcemod/configs/weapons/weapons_hungarian.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_hungarian.cfg
@@ -1,5 +1,90 @@
 "Skins"
 {
+	"Bullet Queen"
+	{
+		"index"		"957"
+		"classes"	"weapon_glock;"
+	}
+	"Fever Dream"
+	{
+		"index"		"956"
+		"classes"	"weapon_ssg08;"
+	}
+	"Darkwing"
+	{
+		"index"		"955"
+		"classes"	"weapon_sg556;"
+	}
+	"Enforcer"
+	{
+		"index"		"954"
+		"classes"	"weapon_scar20;"
+	}
+	"Apocalypto"
+	{
+		"index"		"953"
+		"classes"	"weapon_sawedoff;"
+	}
+	"Bone Forged"
+	{
+		"index"		"952"
+		"classes"	"weapon_revolver;"
+	}
+	"Acid Etched"
+	{
+		"index"		"951"
+		"classes"	"weapon_hkp2000;"
+	}
+	"Prototype"
+	{
+		"index"		"950"
+		"classes"	"weapon_negev;"
+	}
+	"Desert Strike"
+	{
+		"index"		"949"
+		"classes"	"weapon_mp5sd;"
+	}
+	"Justice"
+	{
+		"index"		"948"
+		"classes"	"weapon_mag7;"
+	}
+	"Disco Tech"
+	{
+		"index"		"947"
+		"classes"	"weapon_mac10;"
+	}
+	"Player Two"
+	{
+		"index"		"946"
+		"classes"	"weapon_m4a1_silencer;"
+	}
+	"Blue Ply"
+	{
+		"index"		"945"
+		"classes"	"weapon_deagle;"
+	}
+	"Distressed"
+	{
+		"index"		"944"
+		"classes"	"weapon_cz75a;"
+	}
+	"Capillary"
+	{
+		"index"		"943"
+		"classes"	"weapon_awp;"
+	}
+	"Tom Cat"
+	{
+		"index"		"942"
+		"classes"	"weapon_aug;"
+	}
+	"Phantom Disruptor"
+	{
+		"index"		"941"
+		"classes"	"weapon_ak47;"
+	}
 	"Megemlékezés"
 	{
 		"index"		"919"
@@ -85,87 +170,87 @@
 		"index"		"902"
 		"classes"	"weapon_m249;"
 	}
-	"Warbird"
+	"Harci Madár"
 	{
 		"index"		"900"
 		"classes"	"weapon_m249;"
 	}
-	"Bloodshot"
+	"Véreres"
 	{
 		"index"		"899"
 		"classes"	"weapon_ssg08;"
 	}
-	"Stalker"
+	"Cserkész"
 	{
 		"index"		"898"
 		"classes"	"weapon_mac10;"
 	}
-	"Colony IV"
+	"IV. Kolónia"
 	{
 		"index"		"897"
 		"classes"	"weapon_sg556;"
 	}
-	"Torn"
+	"Tépett"
 	{
 		"index"		"896"
 		"classes"	"weapon_scar20;"
 	}
-	"Balance"
+	"Egyensúly"
 	{
 		"index"		"895"
 		"classes"	"weapon_elite;"
 	}
-	"Obsidian"
+	"Obszidián"
 	{
 		"index"		"894"
 		"classes"	"weapon_hkp2000;"
 	}
-	"Neon Ply"
+	"Neon Kavalkád"
 	{
 		"index"		"893"
 		"classes"	"weapon_mp7;"
 	}
-	"Memento"
+	"Emlék"
 	{
 		"index"		"892"
 		"classes"	"weapon_revolver;"
 	}
-	"Black Sand"
+	"Fekete Homok"
 	{
 		"index"		"891"
 		"classes"	"weapon_g3sg1;"
 	}
-	"Plume"
+	"Tollazat"
 	{
 		"index"		"890"
 		"classes"	"weapon_nova;"
 	}
-	"Decimator"
+	"Tizedelő"
 	{
 		"index"		"889"
 		"classes"	"weapon_tec9;"
 	}
-	"Acid Wash"
+	"Savfürdő"
 	{
 		"index"		"888"
 		"classes"	"weapon_mp5sd;"
 	}
-	"Containment Breach"
+	"Elszabadulás"
 	{
 		"index"		"887"
 		"classes"	"weapon_awp;"
 	}
-	"Arctic Wolf"
+	"Sarki Farkas"
 	{
 		"index"		"886"
 		"classes"	"weapon_aug;"
 	}
-	"Rat Rod"
+	"Patkánybot"
 	{
 		"index"		"885"
 		"classes"	"weapon_ak47;"
 	}
-	"Embargo"
+	"Embargó"
 	{
 		"index"		"884"
 		"classes"	"weapon_bizon;"
@@ -375,27 +460,27 @@
 		"index"		"801"
 		"classes"	"weapon_ak47;"
 	}
-	"Night Borre"
+	"Éji Borre"
 	{
 		"index"		"863"
 		"classes"	"weapon_famas;"
 	}
-	"Moss Quartz"
+	"Mohás Kvarc"
 	{
 		"index"		"862"
 		"classes"	"weapon_m4a1_silencer;"
 	}
-	"Barricade"
+	"Barikád"
 	{
 		"index"		"861"
 		"classes"	"weapon_sg556;"
 	}
-	"Pyre"
+	"Máglya"
 	{
 		"index"		"860"
 		"classes"	"weapon_elite;"
 	}
-	"Emerald Quartz"
+	"Smaragd Kvarc"
 	{
 		"index"		"859"
 		"classes"	"weapon_cz75a;"
@@ -405,32 +490,32 @@
 		"index"		"763"
 		"classes"	"weapon_negev;"
 	}
-	"Red Stone"
+	"Vörös Kő"
 	{
 		"index"		"762"
 		"classes"	"weapon_ssg08;"
 	}
-	"Copper Borre"
+	"Réz Borre"
 	{
 		"index"		"761"
 		"classes"	"weapon_mac10;"
 	}
-	"Frost Borre"
+	"Fagyos Borre"
 	{
 		"index"		"760"
 		"classes"	"weapon_xm1014;"
 	}
-	"Astral Jörmungandr"
+	"Asztrális Jörmungandr"
 	{
 		"index"		"759"
 		"classes"	"weapon_p90;"
 	}
-	"Flame Jörmungandr"
+	"Lángoló Jörmungandr"
 	{
 		"index"		"758"
 		"classes"	"weapon_aug;"
 	}
-	"Emerald Jörmungandr"
+	"Smaragd Jörmungandr"
 	{
 		"index"		"757"
 		"classes"	"weapon_deagle;"
@@ -440,22 +525,22 @@
 		"index"		"756"
 		"classes"	"weapon_awp;"
 	}
-	"Boroque Sand"
+	"Homokszín Barokk"
 	{
 		"index"		"920"
 		"classes"	"weapon_negev;"
 	}
-	"Stained Glass"
+	"Üvegmozaik"
 	{
 		"index"		"867"
 		"classes"	"weapon_mp9;"
 	}
-	"Canal Spray"
+	"Vízpermet"
 	{
 		"index"		"866"
 		"classes"	"weapon_revolver;"
 	}
-	"Stone Mosaico"
+	"Mozaikkő"
 	{
 		"index"		"865"
 		"classes"	"weapon_scar20;"
@@ -465,47 +550,47 @@
 		"index"		"864"
 		"classes"	"weapon_sg556;"
 	}
-	"Baroque Orange"
+	"Narancsszín Barokk"
 	{
 		"index"		"746"
 		"classes"	"weapon_nova;"
 	}
-	"Baroque Purple"
+	"Bíbor Barokk"
 	{
 		"index"		"745"
 		"classes"	"weapon_ak47;"
 	}
-	"Baroque Red"
+	"Vörös Barokk"
 	{
 		"index"		"744"
 		"classes"	"weapon_p90;"
 	}
-	"Orange Filigree"
+	"Narancsszín Sodronyzománc"
 	{
 		"index"		"743"
 		"classes"	"weapon_ssg08;"
 	}
-	"Red Filigree"
+	"Vörös Sodronyzománc"
 	{
 		"index"		"742"
 		"classes"	"weapon_mac10;"
 	}
-	"Dark Filigree"
+	"Sötét Sodronyzománc"
 	{
 		"index"		"741"
 		"classes"	"weapon_p250;"
 	}
-	"Navy Murano"
+	"Tengerészkék Murano"
 	{
 		"index"		"740"
 		"classes"	"weapon_aug;"
 	}
-	"Violet Murano"
+	"Ibolyaszín Murano"
 	{
 		"index"		"739"
 		"classes"	"weapon_g3sg1;"
 	}
-	"Orange Murano"
+	"Narancsszín Murano"
 	{
 		"index"		"738"
 		"classes"	"weapon_tec9;"
@@ -515,7 +600,7 @@
 		"index"		"737"
 		"classes"	"weapon_mag7;"
 	}
-	"The Prince"
+	"A Herceg"
 	{
 		"index"		"736"
 		"classes"	"weapon_awp;"
@@ -525,82 +610,82 @@
 		"index"		"873"
 		"classes"	"weapon_bizon;"
 	}
-	"Bamboo Garden"
+	"Bambuszkert"
 	{
 		"index"		"872"
 		"classes"	"weapon_mp5sd;"
 	}
-	"Surfwood"
+	"Uszadékfa"
 	{
 		"index"		"871"
 		"classes"	"weapon_mac10;"
 	}
-	"Jungle Thicket"
+	"Dzsungelbozót"
 	{
 		"index"		"870"
 		"classes"	"weapon_sawedoff;"
 	}
-	"Sundown"
+	"Napszállta"
 	{
 		"index"		"869"
 		"classes"	"weapon_famas;"
 	}
-	"Sea Calico"
+	"Tengeri Kavalkád"
 	{
 		"index"		"868"
 		"classes"	"weapon_ssg08;"
 	}
-	"Wild Lily"
+	"Vad Liliom"
 	{
 		"index"		"734"
 		"classes"	"weapon_mp9;"
 	}
-	"Rust Leaf"
+	"Rozsdalevél"
 	{
 		"index"		"733"
 		"classes"	"weapon_tec9;"
 	}
-	"Synth Leaf"
+	"Szintetikus Levél"
 	{
 		"index"		"732"
 		"classes"	"weapon_glock;"
 	}
-	"Banana Leaf"
+	"Banánlevél"
 	{
 		"index"		"731"
 		"classes"	"weapon_xm1014;"
 	}
-	"Dark Blossom"
+	"Sötét Bimbó"
 	{
 		"index"		"730"
 		"classes"	"weapon_m4a1;"
 	}
-	"Crimson Blossom"
+	"Karmazsin Bimbó"
 	{
 		"index"		"729"
 		"classes"	"weapon_fiveseven;"
 	}
-	"Teal Blossom"
+	"Zöldeskék Bimbó"
 	{
 		"index"		"728"
 		"classes"	"weapon_mp7;"
 	}
-	"Midnight Lily"
+	"Éjféli Liliom"
 	{
 		"index"		"727"
 		"classes"	"weapon_aug;"
 	}
-	"Sunset Lily"
+	"Alkonyi Liliom"
 	{
 		"index"		"726"
 		"classes"	"weapon_p90;"
 	}
-	"Day Lily"
+	"Sásliliom"
 	{
 		"index"		"725"
 		"classes"	"weapon_ump45;"
 	}
-	"Wild Lotus"
+	"Vad Lótusz"
 	{
 		"index"		"724"
 		"classes"	"weapon_ak47;"
@@ -1720,7 +1805,7 @@
 		"index"		"538"
 		"classes"	"weapon_ssg08;"
 	}
-	"Hiper Bestia"
+	"Hiperbestia"
 	{
 		"index"		"537"
 		"classes"	"weapon_nova;"
@@ -2020,7 +2105,7 @@
 		"index"		"476"
 		"classes"	"weapon_cz75a;"
 	}
-	"Hiper Bestia"
+	"Hiperbestia"
 	{
 		"index"		"475"
 		"classes"	"weapon_awp;"
@@ -2240,7 +2325,7 @@
 		"index"		"431"
 		"classes"	"weapon_mag7;"
 	}
-	"Hiper Bestia"
+	"Hiperbestia"
 	{
 		"index"		"430"
 		"classes"	"weapon_m4a1_silencer;"
