--- a/addons/sourcemod/configs/weapons/weapons_italian.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_italian.cfg
@@ -1,5 +1,90 @@
 "Skins"
 {
+	"Bullet Queen"
+	{
+		"index"		"957"
+		"classes"	"weapon_glock;"
+	}
+	"Fever Dream"
+	{
+		"index"		"956"
+		"classes"	"weapon_ssg08;"
+	}
+	"Darkwing"
+	{
+		"index"		"955"
+		"classes"	"weapon_sg556;"
+	}
+	"Enforcer"
+	{
+		"index"		"954"
+		"classes"	"weapon_scar20;"
+	}
+	"Apocalypto"
+	{
+		"index"		"953"
+		"classes"	"weapon_sawedoff;"
+	}
+	"Bone Forged"
+	{
+		"index"		"952"
+		"classes"	"weapon_revolver;"
+	}
+	"Acid Etched"
+	{
+		"index"		"951"
+		"classes"	"weapon_hkp2000;"
+	}
+	"Prototype"
+	{
+		"index"		"950"
+		"classes"	"weapon_negev;"
+	}
+	"Desert Strike"
+	{
+		"index"		"949"
+		"classes"	"weapon_mp5sd;"
+	}
+	"Justice"
+	{
+		"index"		"948"
+		"classes"	"weapon_mag7;"
+	}
+	"Disco Tech"
+	{
+		"index"		"947"
+		"classes"	"weapon_mac10;"
+	}
+	"Player Two"
+	{
+		"index"		"946"
+		"classes"	"weapon_m4a1_silencer;"
+	}
+	"Blue Ply"
+	{
+		"index"		"945"
+		"classes"	"weapon_deagle;"
+	}
+	"Distressed"
+	{
+		"index"		"944"
+		"classes"	"weapon_cz75a;"
+	}
+	"Capillary"
+	{
+		"index"		"943"
+		"classes"	"weapon_awp;"
+	}
+	"Tom Cat"
+	{
+		"index"		"942"
+		"classes"	"weapon_aug;"
+	}
+	"Phantom Disruptor"
+	{
+		"index"		"941"
+		"classes"	"weapon_ak47;"
+	}
 	"Commemorazione"
 	{
 		"index"		"919"
@@ -85,77 +170,77 @@
 		"index"		"902"
 		"classes"	"weapon_m249;"
 	}
-	"Warbird"
+	"Sparviero"
 	{
 		"index"		"900"
 		"classes"	"weapon_m249;"
 	}
-	"Bloodshot"
+	"Colpo sanguinario"
 	{
 		"index"		"899"
 		"classes"	"weapon_ssg08;"
 	}
-	"Stalker"
+	"Predatore"
 	{
 		"index"		"898"
 		"classes"	"weapon_mac10;"
 	}
-	"Colony IV"
+	"Colonia IV"
 	{
 		"index"		"897"
 		"classes"	"weapon_sg556;"
 	}
-	"Torn"
+	"Spina"
 	{
 		"index"		"896"
 		"classes"	"weapon_scar20;"
 	}
-	"Balance"
+	"Equilibrio"
 	{
 		"index"		"895"
 		"classes"	"weapon_elite;"
 	}
-	"Obsidian"
+	"Ossidiana"
 	{
 		"index"		"894"
 		"classes"	"weapon_hkp2000;"
 	}
-	"Neon Ply"
+	"Rivestimento fosforescente"
 	{
 		"index"		"893"
 		"classes"	"weapon_mp7;"
 	}
-	"Memento"
+	"Ricordo"
 	{
 		"index"		"892"
 		"classes"	"weapon_revolver;"
 	}
-	"Black Sand"
+	"Sabbia nera"
 	{
 		"index"		"891"
 		"classes"	"weapon_g3sg1;"
 	}
-	"Plume"
+	"Piuma"
 	{
 		"index"		"890"
 		"classes"	"weapon_nova;"
 	}
-	"Decimator"
+	"Decimatore"
 	{
 		"index"		"889"
 		"classes"	"weapon_tec9;"
 	}
-	"Acid Wash"
+	"Lavaggio acido"
 	{
 		"index"		"888"
 		"classes"	"weapon_mp5sd;"
 	}
-	"Containment Breach"
+	"Breccia di contenimento"
 	{
 		"index"		"887"
 		"classes"	"weapon_awp;"
 	}
-	"Arctic Wolf"
+	"Lupo artico"
 	{
 		"index"		"886"
 		"classes"	"weapon_aug;"
@@ -205,27 +290,27 @@
 		"index"		"852"
 		"classes"	"weapon_knife_widowmaker;"
 	}
-	"Moonrise"
+	"Chiaro di luna"
 	{
 		"index"		"851"
 		"classes"	"weapon_ump45;"
 	}
-	"Incinegator"
+	"Incendiatore"
 	{
 		"index"		"850"
 		"classes"	"weapon_xm1014;"
 	}
-	"Off World"
+	"Fuori dal mondo"
 	{
 		"index"		"849"
 		"classes"	"weapon_p90;"
 	}
-	"Verdigris"
+	"Verderame"
 	{
 		"index"		"848"
 		"classes"	"weapon_p250;"
 	}
-	"Mischief"
+	"Marachella"
 	{
 		"index"		"847"
 		"classes"	"weapon_mp7;"
@@ -245,7 +330,7 @@
 		"index"		"844"
 		"classes"	"weapon_m4a1;"
 	}
-	"Skull Crusher"
+	"Spaccacrani"
 	{
 		"index"		"843"
 		"classes"	"weapon_revolver;"
@@ -255,17 +340,17 @@
 		"index"		"842"
 		"classes"	"weapon_galilar;"
 	}
-	"Light Rail"
+	"Illusione"
 	{
 		"index"		"841"
 		"classes"	"weapon_deagle;"
 	}
-	"Whitefish"
+	"Pesce bianco"
 	{
 		"index"		"840"
 		"classes"	"weapon_mac10;"
 	}
-	"Bamboozle"
+	"Al verde"
 	{
 		"index"		"839"
 		"classes"	"weapon_tec9;"
@@ -275,17 +360,17 @@
 		"index"		"838"
 		"classes"	"weapon_awp;"
 	}
-	"Angry Mob"
+	"Folla inferocita"
 	{
 		"index"		"837"
 		"classes"	"weapon_fiveseven;"
 	}
-	"Uncharted"
+	"Inesplorato"
 	{
 		"index"		"836"
 		"classes"	"weapon_ak47;"
 	}
-	"Crypsis"
+	"Criptismo"
 	{
 		"index"		"835"
 		"classes"	"weapon_famas;"
@@ -300,22 +385,22 @@
 		"index"		"816"
 		"classes"	"weapon_tec9;"
 	}
-	"Danger Close"
+	"Vicino al pericolo"
 	{
 		"index"		"815"
 		"classes"	"weapon_sg556;"
 	}
-	"Black Sand"
+	"Sabbia nera"
 	{
 		"index"		"814"
 		"classes"	"weapon_sawedoff;"
 	}
-	"Nevermore"
+	"Mai più"
 	{
 		"index"		"813"
 		"classes"	"weapon_p250;"
 	}
-	"Pipe Down"
+	"Tubi"
 	{
 		"index"		"812"
 		"classes"	"weapon_mac10;"
@@ -330,12 +415,12 @@
 		"index"		"810"
 		"classes"	"weapon_mp5sd;"
 	}
-	"Wood Fired"
+	"Legna bruciata"
 	{
 		"index"		"809"
 		"classes"	"weapon_nova;"
 	}
-	"Oxide Blaze"
+	"Fiamme di ossido"
 	{
 		"index"		"808"
 		"classes"	"weapon_glock;"
@@ -345,7 +430,7 @@
 		"index"		"807"
 		"classes"	"weapon_galilar;"
 	}
-	"Scavenger"
+	"Avvoltoio"
 	{
 		"index"		"806"
 		"classes"	"weapon_g3sg1;"
@@ -375,27 +460,27 @@
 		"index"		"801"
 		"classes"	"weapon_ak47;"
 	}
-	"Night Borre"
+	"Blu notte"
 	{
 		"index"		"863"
 		"classes"	"weapon_famas;"
 	}
-	"Moss Quartz"
+	"Quarzo verde"
 	{
 		"index"		"862"
 		"classes"	"weapon_m4a1_silencer;"
 	}
-	"Barricade"
+	"Barricata"
 	{
 		"index"		"861"
 		"classes"	"weapon_sg556;"
 	}
-	"Pyre"
+	"Pira"
 	{
 		"index"		"860"
 		"classes"	"weapon_elite;"
 	}
-	"Emerald Quartz"
+	"Verde smeraldo"
 	{
 		"index"		"859"
 		"classes"	"weapon_cz75a;"
@@ -405,32 +490,32 @@
 		"index"		"763"
 		"classes"	"weapon_negev;"
 	}
-	"Red Stone"
+	"Pietra rossa"
 	{
 		"index"		"762"
 		"classes"	"weapon_ssg08;"
 	}
-	"Copper Borre"
+	"Marrone rame"
 	{
 		"index"		"761"
 		"classes"	"weapon_mac10;"
 	}
-	"Frost Borre"
+	"Telaio freddo"
 	{
 		"index"		"760"
 		"classes"	"weapon_xm1014;"
 	}
-	"Astral Jörmungandr"
+	"Blu spaziale"
 	{
 		"index"		"759"
 		"classes"	"weapon_p90;"
 	}
-	"Flame Jörmungandr"
+	"Rosso fiammante"
 	{
 		"index"		"758"
 		"classes"	"weapon_aug;"
 	}
-	"Emerald Jörmungandr"
+	"Jörmungandr verde"
 	{
 		"index"		"757"
 		"classes"	"weapon_deagle;"
@@ -440,22 +525,22 @@
 		"index"		"756"
 		"classes"	"weapon_awp;"
 	}
-	"Boroque Sand"
+	"Giallo veneziano"
 	{
 		"index"		"920"
 		"classes"	"weapon_negev;"
 	}
-	"Stained Glass"
+	"Vetro dipinto"
 	{
 		"index"		"867"
 		"classes"	"weapon_mp9;"
 	}
-	"Canal Spray"
+	"Spruzzo Canal"
 	{
 		"index"		"866"
 		"classes"	"weapon_revolver;"
 	}
-	"Stone Mosaico"
+	"Mosaico di pietra"
 	{
 		"index"		"865"
 		"classes"	"weapon_scar20;"
@@ -465,47 +550,47 @@
 		"index"		"864"
 		"classes"	"weapon_sg556;"
 	}
-	"Baroque Orange"
+	"Arancione barocco"
 	{
 		"index"		"746"
 		"classes"	"weapon_nova;"
 	}
-	"Baroque Purple"
+	"Viola barocco"
 	{
 		"index"		"745"
 		"classes"	"weapon_ak47;"
 	}
-	"Baroque Red"
+	"Rosso barocco"
 	{
 		"index"		"744"
 		"classes"	"weapon_p90;"
 	}
-	"Orange Filigree"
+	"Filigrana arancione"
 	{
 		"index"		"743"
 		"classes"	"weapon_ssg08;"
 	}
-	"Red Filigree"
+	"Filigrana rossa"
 	{
 		"index"		"742"
 		"classes"	"weapon_mac10;"
 	}
-	"Dark Filigree"
+	"Filigrana scura"
 	{
 		"index"		"741"
 		"classes"	"weapon_p250;"
 	}
-	"Navy Murano"
+	"Blu Murano"
 	{
 		"index"		"740"
 		"classes"	"weapon_aug;"
 	}
-	"Violet Murano"
+	"Violetto Murano"
 	{
 		"index"		"739"
 		"classes"	"weapon_g3sg1;"
 	}
-	"Orange Murano"
+	"Arancione Murano"
 	{
 		"index"		"738"
 		"classes"	"weapon_tec9;"
@@ -515,7 +600,7 @@
 		"index"		"737"
 		"classes"	"weapon_mag7;"
 	}
-	"The Prince"
+	"Il principe"
 	{
 		"index"		"736"
 		"classes"	"weapon_awp;"
@@ -525,82 +610,82 @@
 		"index"		"873"
 		"classes"	"weapon_bizon;"
 	}
-	"Bamboo Garden"
+	"Giardino di bamboo"
 	{
 		"index"		"872"
 		"classes"	"weapon_mp5sd;"
 	}
-	"Surfwood"
+	"Tavola da surf"
 	{
 		"index"		"871"
 		"classes"	"weapon_mac10;"
 	}
-	"Jungle Thicket"
+	"Verde giungla"
 	{
 		"index"		"870"
 		"classes"	"weapon_sawedoff;"
 	}
-	"Sundown"
+	"Tramonto"
 	{
 		"index"		"869"
 		"classes"	"weapon_famas;"
 	}
-	"Sea Calico"
+	"Calico marino"
 	{
 		"index"		"868"
 		"classes"	"weapon_ssg08;"
 	}
-	"Wild Lily"
+	"Giglio selvatico"
 	{
 		"index"		"734"
 		"classes"	"weapon_mp9;"
 	}
-	"Rust Leaf"
+	"Foglia arrugginita"
 	{
 		"index"		"733"
 		"classes"	"weapon_tec9;"
 	}
-	"Synth Leaf"
+	"Foglia sintetica"
 	{
 		"index"		"732"
 		"classes"	"weapon_glock;"
 	}
-	"Banana Leaf"
+	"Foglia di banano"
 	{
 		"index"		"731"
 		"classes"	"weapon_xm1014;"
 	}
-	"Dark Blossom"
+	"Bocciolo blu"
 	{
 		"index"		"730"
 		"classes"	"weapon_m4a1;"
 	}
-	"Crimson Blossom"
+	"Bocciolo rosso"
 	{
 		"index"		"729"
 		"classes"	"weapon_fiveseven;"
 	}
-	"Teal Blossom"
+	"Bocciolo turchese"
 	{
 		"index"		"728"
 		"classes"	"weapon_mp7;"
 	}
-	"Midnight Lily"
+	"Giglio di mezzanotte"
 	{
 		"index"		"727"
 		"classes"	"weapon_aug;"
 	}
-	"Sunset Lily"
+	"Giglio crepuscolare"
 	{
 		"index"		"726"
 		"classes"	"weapon_p90;"
 	}
-	"Day Lily"
+	"Emerocallide"
 	{
 		"index"		"725"
 		"classes"	"weapon_ump45;"
 	}
-	"Wild Lotus"
+	"Loto impazzito"
 	{
 		"index"		"724"
 		"classes"	"weapon_ak47;"
@@ -1635,7 +1720,7 @@
 		"index"		"784"
 		"classes"	"weapon_fiveseven;"
 	}
-	"Bulkhead"
+	"Paratia"
 	{
 		"index"		"783"
 		"classes"	"weapon_negev;"
