--- a/addons/sourcemod/configs/weapons/weapons_ukrainian.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_ukrainian.cfg
@@ -1,5 +1,90 @@
 "Skins"
 {
+	"Bullet Queen"
+	{
+		"index"		"957"
+		"classes"	"weapon_glock;"
+	}
+	"Fever Dream"
+	{
+		"index"		"956"
+		"classes"	"weapon_ssg08;"
+	}
+	"Darkwing"
+	{
+		"index"		"955"
+		"classes"	"weapon_sg556;"
+	}
+	"Enforcer"
+	{
+		"index"		"954"
+		"classes"	"weapon_scar20;"
+	}
+	"Apocalypto"
+	{
+		"index"		"953"
+		"classes"	"weapon_sawedoff;"
+	}
+	"Bone Forged"
+	{
+		"index"		"952"
+		"classes"	"weapon_revolver;"
+	}
+	"Acid Etched"
+	{
+		"index"		"951"
+		"classes"	"weapon_hkp2000;"
+	}
+	"Prototype"
+	{
+		"index"		"950"
+		"classes"	"weapon_negev;"
+	}
+	"Desert Strike"
+	{
+		"index"		"949"
+		"classes"	"weapon_mp5sd;"
+	}
+	"Justice"
+	{
+		"index"		"948"
+		"classes"	"weapon_mag7;"
+	}
+	"Disco Tech"
+	{
+		"index"		"947"
+		"classes"	"weapon_mac10;"
+	}
+	"Player Two"
+	{
+		"index"		"946"
+		"classes"	"weapon_m4a1_silencer;"
+	}
+	"Blue Ply"
+	{
+		"index"		"945"
+		"classes"	"weapon_deagle;"
+	}
+	"Distressed"
+	{
+		"index"		"944"
+		"classes"	"weapon_cz75a;"
+	}
+	"Capillary"
+	{
+		"index"		"943"
+		"classes"	"weapon_awp;"
+	}
+	"Tom Cat"
+	{
+		"index"		"942"
+		"classes"	"weapon_aug;"
+	}
+	"Phantom Disruptor"
+	{
+		"index"		"941"
+		"classes"	"weapon_ak47;"
+	}
 	"Вшанування"
 	{
 		"index"		"919"
@@ -85,87 +170,87 @@
 		"index"		"902"
 		"classes"	"weapon_m249;"
 	}
-	"Warbird"
+	"Льотчик-ветеран"
 	{
 		"index"		"900"
 		"classes"	"weapon_m249;"
 	}
-	"Bloodshot"
+	"Червоні очі"
 	{
 		"index"		"899"
 		"classes"	"weapon_ssg08;"
 	}
-	"Stalker"
+	"Мисливець"
 	{
 		"index"		"898"
 		"classes"	"weapon_mac10;"
 	}
-	"Colony IV"
+	"Колонія IV"
 	{
 		"index"		"897"
 		"classes"	"weapon_sg556;"
 	}
-	"Torn"
+	"Розрив"
 	{
 		"index"		"896"
 		"classes"	"weapon_scar20;"
 	}
-	"Balance"
+	"Баланс"
 	{
 		"index"		"895"
 		"classes"	"weapon_elite;"
 	}
-	"Obsidian"
+	"Обсидіан"
 	{
 		"index"		"894"
 		"classes"	"weapon_hkp2000;"
 	}
-	"Neon Ply"
+	"Неонові жили"
 	{
 		"index"		"893"
 		"classes"	"weapon_mp7;"
 	}
-	"Memento"
+	"Пам’ятка"
 	{
 		"index"		"892"
 		"classes"	"weapon_revolver;"
 	}
-	"Black Sand"
+	"Чорний пісок"
 	{
 		"index"		"891"
 		"classes"	"weapon_g3sg1;"
 	}
-	"Plume"
+	"Перо"
 	{
 		"index"		"890"
 		"classes"	"weapon_nova;"
 	}
-	"Decimator"
+	"Винищувач"
 	{
 		"index"		"889"
 		"classes"	"weapon_tec9;"
 	}
-	"Acid Wash"
+	"Кислотний душ"
 	{
 		"index"		"888"
 		"classes"	"weapon_mp5sd;"
 	}
-	"Containment Breach"
+	"Прорив ізоляції"
 	{
 		"index"		"887"
 		"classes"	"weapon_awp;"
 	}
-	"Arctic Wolf"
+	"Арктичний вовк"
 	{
 		"index"		"886"
 		"classes"	"weapon_aug;"
 	}
-	"Rat Rod"
+	"Тарантайка"
 	{
 		"index"		"885"
 		"classes"	"weapon_ak47;"
 	}
-	"Embargo"
+	"Ембарго"
 	{
 		"index"		"884"
 		"classes"	"weapon_bizon;"
@@ -375,87 +460,87 @@
 		"index"		"801"
 		"classes"	"weapon_ak47;"
 	}
-	"Night Borre"
+	"Нічний Борре"
 	{
 		"index"		"863"
 		"classes"	"weapon_famas;"
 	}
-	"Moss Quartz"
+	"Моховий кварц"
 	{
 		"index"		"862"
 		"classes"	"weapon_m4a1_silencer;"
 	}
-	"Barricade"
+	"Барикада"
 	{
 		"index"		"861"
 		"classes"	"weapon_sg556;"
 	}
-	"Pyre"
+	"Похоронне вогнище"
 	{
 		"index"		"860"
 		"classes"	"weapon_elite;"
 	}
-	"Emerald Quartz"
+	"Смарагдовий кварц"
 	{
 		"index"		"859"
 		"classes"	"weapon_cz75a;"
 	}
-	"Mjölnir"
+	"Мйольнір"
 	{
 		"index"		"763"
 		"classes"	"weapon_negev;"
 	}
-	"Red Stone"
+	"Червоний камінь"
 	{
 		"index"		"762"
 		"classes"	"weapon_ssg08;"
 	}
-	"Copper Borre"
+	"Мідний Борре"
 	{
 		"index"		"761"
 		"classes"	"weapon_mac10;"
 	}
-	"Frost Borre"
+	"Льодяний Борре"
 	{
 		"index"		"760"
 		"classes"	"weapon_xm1014;"
 	}
-	"Astral Jörmungandr"
+	"Астральний Йормунганд"
 	{
 		"index"		"759"
 		"classes"	"weapon_p90;"
 	}
-	"Flame Jörmungandr"
+	"Полум’яний Йормунганд"
 	{
 		"index"		"758"
 		"classes"	"weapon_aug;"
 	}
-	"Emerald Jörmungandr"
+	"Смарагдовий Йормунганд"
 	{
 		"index"		"757"
 		"classes"	"weapon_deagle;"
 	}
-	"Gungnir"
+	"Ґунґнір"
 	{
 		"index"		"756"
 		"classes"	"weapon_awp;"
 	}
-	"Boroque Sand"
+	"Бароковий пісок"
 	{
 		"index"		"920"
 		"classes"	"weapon_negev;"
 	}
-	"Stained Glass"
+	"Вітраж"
 	{
 		"index"		"867"
 		"classes"	"weapon_mp9;"
 	}
-	"Canal Spray"
+	"Водяні бризки"
 	{
 		"index"		"866"
 		"classes"	"weapon_revolver;"
 	}
-	"Stone Mosaico"
+	"Кам’яна мозаїка"
 	{
 		"index"		"865"
 		"classes"	"weapon_scar20;"
@@ -465,57 +550,57 @@
 		"index"		"864"
 		"classes"	"weapon_sg556;"
 	}
-	"Baroque Orange"
+	"Помаранчеве бароко"
 	{
 		"index"		"746"
 		"classes"	"weapon_nova;"
 	}
-	"Baroque Purple"
+	"Пурпурове бароко"
 	{
 		"index"		"745"
 		"classes"	"weapon_ak47;"
 	}
-	"Baroque Red"
+	"Червоне бароко"
 	{
 		"index"		"744"
 		"classes"	"weapon_p90;"
 	}
-	"Orange Filigree"
+	"Помаранчева філігрань"
 	{
 		"index"		"743"
 		"classes"	"weapon_ssg08;"
 	}
-	"Red Filigree"
+	"Червона філігрань"
 	{
 		"index"		"742"
 		"classes"	"weapon_mac10;"
 	}
-	"Dark Filigree"
+	"Темна філігрань"
 	{
 		"index"		"741"
 		"classes"	"weapon_p250;"
 	}
-	"Navy Murano"
+	"Синє Мурано"
 	{
 		"index"		"740"
 		"classes"	"weapon_aug;"
 	}
-	"Violet Murano"
+	"Фіолетове Мурано"
 	{
 		"index"		"739"
 		"classes"	"weapon_g3sg1;"
 	}
-	"Orange Murano"
+	"Помаранчеве Мурано"
 	{
 		"index"		"738"
 		"classes"	"weapon_tec9;"
 	}
-	"Cinquedea"
+	"Чинкуеда"
 	{
 		"index"		"737"
 		"classes"	"weapon_mag7;"
 	}
-	"The Prince"
+	"Принц"
 	{
 		"index"		"736"
 		"classes"	"weapon_awp;"
@@ -525,82 +610,82 @@
 		"index"		"873"
 		"classes"	"weapon_bizon;"
 	}
-	"Bamboo Garden"
+	"Бамбуковий сад"
 	{
 		"index"		"872"
 		"classes"	"weapon_mp5sd;"
 	}
-	"Surfwood"
+	"Прибій"
 	{
 		"index"		"871"
 		"classes"	"weapon_mac10;"
 	}
-	"Jungle Thicket"
+	"Джунглеві хащі"
 	{
 		"index"		"870"
 		"classes"	"weapon_sawedoff;"
 	}
-	"Sundown"
+	"Захід сонця"
 	{
 		"index"		"869"
 		"classes"	"weapon_famas;"
 	}
-	"Sea Calico"
+	"Морський ситець"
 	{
 		"index"		"868"
 		"classes"	"weapon_ssg08;"
 	}
-	"Wild Lily"
+	"Дика лілія"
 	{
 		"index"		"734"
 		"classes"	"weapon_mp9;"
 	}
-	"Rust Leaf"
+	"Іржаве листя"
 	{
 		"index"		"733"
 		"classes"	"weapon_tec9;"
 	}
-	"Synth Leaf"
+	"Штучне листя"
 	{
 		"index"		"732"
 		"classes"	"weapon_glock;"
 	}
-	"Banana Leaf"
+	"Бананове листя"
 	{
 		"index"		"731"
 		"classes"	"weapon_xm1014;"
 	}
-	"Dark Blossom"
+	"Темний квіт"
 	{
 		"index"		"730"
 		"classes"	"weapon_m4a1;"
 	}
-	"Crimson Blossom"
+	"Багряний цвіт"
 	{
 		"index"		"729"
 		"classes"	"weapon_fiveseven;"
 	}
-	"Teal Blossom"
+	"Бірюзовий цвіт"
 	{
 		"index"		"728"
 		"classes"	"weapon_mp7;"
 	}
-	"Midnight Lily"
+	"Опівнічна лілія"
 	{
 		"index"		"727"
 		"classes"	"weapon_aug;"
 	}
-	"Sunset Lily"
+	"Вечірня лілія"
 	{
 		"index"		"726"
 		"classes"	"weapon_p90;"
 	}
-	"Day Lily"
+	"Денна лілія"
 	{
 		"index"		"725"
 		"classes"	"weapon_ump45;"
 	}
-	"Wild Lotus"
+	"Дикий лотос"
 	{
 		"index"		"724"
 		"classes"	"weapon_ak47;"
