--- a/addons/sourcemod/configs/weapons/weapons_russian.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_russian.cfg
@@ -1,5 +1,90 @@
 "Skins"
 {
+	"Bullet Queen"
+	{
+		"index"		"957"
+		"classes"	"weapon_glock;"
+	}
+	"Fever Dream"
+	{
+		"index"		"956"
+		"classes"	"weapon_ssg08;"
+	}
+	"Darkwing"
+	{
+		"index"		"955"
+		"classes"	"weapon_sg556;"
+	}
+	"Enforcer"
+	{
+		"index"		"954"
+		"classes"	"weapon_scar20;"
+	}
+	"Apocalypto"
+	{
+		"index"		"953"
+		"classes"	"weapon_sawedoff;"
+	}
+	"Bone Forged"
+	{
+		"index"		"952"
+		"classes"	"weapon_revolver;"
+	}
+	"Acid Etched"
+	{
+		"index"		"951"
+		"classes"	"weapon_hkp2000;"
+	}
+	"Prototype"
+	{
+		"index"		"950"
+		"classes"	"weapon_negev;"
+	}
+	"Desert Strike"
+	{
+		"index"		"949"
+		"classes"	"weapon_mp5sd;"
+	}
+	"Justice"
+	{
+		"index"		"948"
+		"classes"	"weapon_mag7;"
+	}
+	"Disco Tech"
+	{
+		"index"		"947"
+		"classes"	"weapon_mac10;"
+	}
+	"Player Two"
+	{
+		"index"		"946"
+		"classes"	"weapon_m4a1_silencer;"
+	}
+	"Blue Ply"
+	{
+		"index"		"945"
+		"classes"	"weapon_deagle;"
+	}
+	"Distressed"
+	{
+		"index"		"944"
+		"classes"	"weapon_cz75a;"
+	}
+	"Capillary"
+	{
+		"index"		"943"
+		"classes"	"weapon_awp;"
+	}
+	"Tom Cat"
+	{
+		"index"		"942"
+		"classes"	"weapon_aug;"
+	}
+	"Phantom Disruptor"
+	{
+		"index"		"941"
+		"classes"	"weapon_ak47;"
+	}
 	"Дань уважения"
 	{
 		"index"		"919"
@@ -90,7 +175,7 @@
 		"index"		"900"
 		"classes"	"weapon_m249;"
 	}
-	"Глаз"
+	"Кровавая пелена"
 	{
 		"index"		"899"
 		"classes"	"weapon_ssg08;"
@@ -430,7 +515,7 @@
 		"index"		"758"
 		"classes"	"weapon_aug;"
 	}
-	"Изумрундый Ёрмунганд"
+	"Изумрудный Ёрмунганд"
 	{
 		"index"		"757"
 		"classes"	"weapon_deagle;"
@@ -1740,7 +1825,7 @@
 		"index"		"534"
 		"classes"	"weapon_mac10;"
 	}
-	"Звёздный крейсер"
+	"Звездный крейсер"
 	{
 		"index"		"533"
 		"classes"	"weapon_m4a1;"
@@ -3385,7 +3470,7 @@
 		"index"		"196"
 		"classes"	"weapon_scar20;"
 	}
-	"Деметра"
+	"Витраж"
 	{
 		"index"		"195"
 		"classes"	"weapon_g3sg1;"
