--- a/addons/sourcemod/configs/weapons/weapons_schinese.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_schinese.cfg
@@ -1,5 +1,90 @@
 "Skins"
 {
+	"Bullet Queen"
+	{
+		"index"		"957"
+		"classes"	"weapon_glock;"
+	}
+	"Fever Dream"
+	{
+		"index"		"956"
+		"classes"	"weapon_ssg08;"
+	}
+	"Darkwing"
+	{
+		"index"		"955"
+		"classes"	"weapon_sg556;"
+	}
+	"Enforcer"
+	{
+		"index"		"954"
+		"classes"	"weapon_scar20;"
+	}
+	"Apocalypto"
+	{
+		"index"		"953"
+		"classes"	"weapon_sawedoff;"
+	}
+	"Bone Forged"
+	{
+		"index"		"952"
+		"classes"	"weapon_revolver;"
+	}
+	"Acid Etched"
+	{
+		"index"		"951"
+		"classes"	"weapon_hkp2000;"
+	}
+	"Prototype"
+	{
+		"index"		"950"
+		"classes"	"weapon_negev;"
+	}
+	"Desert Strike"
+	{
+		"index"		"949"
+		"classes"	"weapon_mp5sd;"
+	}
+	"Justice"
+	{
+		"index"		"948"
+		"classes"	"weapon_mag7;"
+	}
+	"Disco Tech"
+	{
+		"index"		"947"
+		"classes"	"weapon_mac10;"
+	}
+	"Player Two"
+	{
+		"index"		"946"
+		"classes"	"weapon_m4a1_silencer;"
+	}
+	"Blue Ply"
+	{
+		"index"		"945"
+		"classes"	"weapon_deagle;"
+	}
+	"Distressed"
+	{
+		"index"		"944"
+		"classes"	"weapon_cz75a;"
+	}
+	"Capillary"
+	{
+		"index"		"943"
+		"classes"	"weapon_awp;"
+	}
+	"Tom Cat"
+	{
+		"index"		"942"
+		"classes"	"weapon_aug;"
+	}
+	"Phantom Disruptor"
+	{
+		"index"		"941"
+		"classes"	"weapon_ak47;"
+	}
 	"纪念碑"
 	{
 		"index"		"919"
@@ -30,7 +115,7 @@
 		"index"		"914"
 		"classes"	"weapon_scar20;"
 	}
-	"致命萌犬"
+	"汪之萌杀"
 	{
 		"index"		"913"
 		"classes"	"weapon_aug;"
@@ -150,7 +235,7 @@
 		"index"		"888"
 		"classes"	"weapon_mp5sd;"
 	}
-	"突破封锁"
+	"冲出重围"
 	{
 		"index"		"887"
 		"classes"	"weapon_awp;"
@@ -400,7 +485,7 @@
 		"index"		"859"
 		"classes"	"weapon_cz75a;"
 	}
-	"雷神之锤"
+	"雷霆之锤"
 	{
 		"index"		"763"
 		"classes"	"weapon_negev;"
@@ -600,7 +685,7 @@
 		"index"		"725"
 		"classes"	"weapon_ump45;"
 	}
-	"野生莲花"
+	"野荷"
 	{
 		"index"		"724"
 		"classes"	"weapon_ak47;"
@@ -1205,7 +1290,7 @@
 		"index"		"601"
 		"classes"	"weapon_aug;"
 	}
-	"霓虹变革"
+	"霓虹革命"
 	{
 		"index"		"600"
 		"classes"	"weapon_ak47;"
