--- a/addons/sourcemod/configs/weapons/weapons_spanish.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_spanish.cfg
@@ -1,5 +1,90 @@
 "Skins"
 {
+	"Bullet Queen"
+	{
+		"index"		"957"
+		"classes"	"weapon_glock;"
+	}
+	"Fever Dream"
+	{
+		"index"		"956"
+		"classes"	"weapon_ssg08;"
+	}
+	"Darkwing"
+	{
+		"index"		"955"
+		"classes"	"weapon_sg556;"
+	}
+	"Enforcer"
+	{
+		"index"		"954"
+		"classes"	"weapon_scar20;"
+	}
+	"Apocalypto"
+	{
+		"index"		"953"
+		"classes"	"weapon_sawedoff;"
+	}
+	"Bone Forged"
+	{
+		"index"		"952"
+		"classes"	"weapon_revolver;"
+	}
+	"Acid Etched"
+	{
+		"index"		"951"
+		"classes"	"weapon_hkp2000;"
+	}
+	"Prototype"
+	{
+		"index"		"950"
+		"classes"	"weapon_negev;"
+	}
+	"Desert Strike"
+	{
+		"index"		"949"
+		"classes"	"weapon_mp5sd;"
+	}
+	"Justice"
+	{
+		"index"		"948"
+		"classes"	"weapon_mag7;"
+	}
+	"Disco Tech"
+	{
+		"index"		"947"
+		"classes"	"weapon_mac10;"
+	}
+	"Player Two"
+	{
+		"index"		"946"
+		"classes"	"weapon_m4a1_silencer;"
+	}
+	"Blue Ply"
+	{
+		"index"		"945"
+		"classes"	"weapon_deagle;"
+	}
+	"Distressed"
+	{
+		"index"		"944"
+		"classes"	"weapon_cz75a;"
+	}
+	"Capillary"
+	{
+		"index"		"943"
+		"classes"	"weapon_awp;"
+	}
+	"Tom Cat"
+	{
+		"index"		"942"
+		"classes"	"weapon_aug;"
+	}
+	"Phantom Disruptor"
+	{
+		"index"		"941"
+		"classes"	"weapon_ak47;"
+	}
 	"Conmemoración"
 	{
 		"index"		"919"
@@ -90,12 +175,12 @@
 		"index"		"900"
 		"classes"	"weapon_m249;"
 	}
-	"Disparo sangriento"
+	"Inyectado en sangre"
 	{
 		"index"		"899"
 		"classes"	"weapon_ssg08;"
 	}
-	"Stalker"
+	"Acechador"
 	{
 		"index"		"898"
 		"classes"	"weapon_mac10;"
@@ -105,7 +190,7 @@
 		"index"		"897"
 		"classes"	"weapon_sg556;"
 	}
-	"Torn"
+	"Rasgado"
 	{
 		"index"		"896"
 		"classes"	"weapon_scar20;"
@@ -150,7 +235,7 @@
 		"index"		"888"
 		"classes"	"weapon_mp5sd;"
 	}
-	"Containment Breach"
+	"Brecha de contención"
 	{
 		"index"		"887"
 		"classes"	"weapon_awp;"
@@ -375,7 +460,7 @@
 		"index"		"801"
 		"classes"	"weapon_ak47;"
 	}
-	"Night Borre"
+	"Armazón nocturno"
 	{
 		"index"		"863"
 		"classes"	"weapon_famas;"
@@ -415,7 +500,7 @@
 		"index"		"761"
 		"classes"	"weapon_mac10;"
 	}
-	"Frost Borre"
+	"Armazón frio"
 	{
 		"index"		"760"
 		"classes"	"weapon_xm1014;"
@@ -580,7 +665,7 @@
 		"index"		"729"
 		"classes"	"weapon_fiveseven;"
 	}
-	"Flores azul verdosas"
+	"Florecer turquesa"
 	{
 		"index"		"728"
 		"classes"	"weapon_mp7;"
@@ -1500,7 +1585,7 @@
 		"index"		"542"
 		"classes"	"weapon_bizon;"
 	}
-	"Flota aviar"
+	"Golondrinas"
 	{
 		"index"		"541"
 		"classes"	"weapon_aug;"
