--- a/addons/sourcemod/configs/weapons/weapons_tchinese.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_tchinese.cfg
@@ -1,46 +1,131 @@
 "Skins"
 {
-	"Commemoration"
+	"Bullet Queen"
+	{
+		"index"		"957"
+		"classes"	"weapon_glock;"
+	}
+	"Fever Dream"
+	{
+		"index"		"956"
+		"classes"	"weapon_ssg08;"
+	}
+	"Darkwing"
+	{
+		"index"		"955"
+		"classes"	"weapon_sg556;"
+	}
+	"Enforcer"
+	{
+		"index"		"954"
+		"classes"	"weapon_scar20;"
+	}
+	"Apocalypto"
+	{
+		"index"		"953"
+		"classes"	"weapon_sawedoff;"
+	}
+	"Bone Forged"
+	{
+		"index"		"952"
+		"classes"	"weapon_revolver;"
+	}
+	"Acid Etched"
+	{
+		"index"		"951"
+		"classes"	"weapon_hkp2000;"
+	}
+	"Prototype"
+	{
+		"index"		"950"
+		"classes"	"weapon_negev;"
+	}
+	"Desert Strike"
+	{
+		"index"		"949"
+		"classes"	"weapon_mp5sd;"
+	}
+	"Justice"
+	{
+		"index"		"948"
+		"classes"	"weapon_mag7;"
+	}
+	"Disco Tech"
+	{
+		"index"		"947"
+		"classes"	"weapon_mac10;"
+	}
+	"Player Two"
+	{
+		"index"		"946"
+		"classes"	"weapon_m4a1_silencer;"
+	}
+	"Blue Ply"
+	{
+		"index"		"945"
+		"classes"	"weapon_deagle;"
+	}
+	"Distressed"
+	{
+		"index"		"944"
+		"classes"	"weapon_cz75a;"
+	}
+	"Capillary"
+	{
+		"index"		"943"
+		"classes"	"weapon_awp;"
+	}
+	"Tom Cat"
+	{
+		"index"		"942"
+		"classes"	"weapon_aug;"
+	}
+	"Phantom Disruptor"
+	{
+		"index"		"941"
+		"classes"	"weapon_ak47;"
+	}
+	"紀念特飾"
 	{
 		"index"		"919"
 		"classes"	"weapon_famas;"
 	}
-	"Sacrifice"
+	"犧牲小我"
 	{
 		"index"		"918"
 		"classes"	"weapon_glock;"
 	}
-	"Wildfire"
+	"野火"
 	{
 		"index"		"917"
 		"classes"	"weapon_awp;"
 	}
-	"Plastique"
+	"塑膠炸藥"
 	{
 		"index"		"916"
 		"classes"	"weapon_ump45;"
 	}
-	"Agent"
+	"幹員"
 	{
 		"index"		"915"
 		"classes"	"weapon_mp5sd;"
 	}
-	"Assault"
+	"Assault 鐵皮屋"
 	{
 		"index"		"914"
 		"classes"	"weapon_scar20;"
 	}
-	"Death by Puppy"
+	"鄰狗而死"
 	{
 		"index"		"913"
 		"classes"	"weapon_aug;"
 	}
-	"Nostalgia"
+	"懷舊之情"
 	{
 		"index"		"911"
 		"classes"	"weapon_p90;"
 	}
-	"Hydra"
+	"九頭蛇"
 	{
 		"index"		"910"
 		"classes"	"weapon_mp9;"
@@ -50,37 +135,37 @@
 		"index"		"909"
 		"classes"	"weapon_mag7;"
 	}
-	"Classic Crate"
+	"經典鐵箱"
 	{
 		"index"		"908"
 		"classes"	"weapon_mac10;"
 	}
-	"Inferno"
+	"煉獄 Inferno"
 	{
 		"index"		"907"
 		"classes"	"weapon_p250;"
 	}
-	"Buddy"
+	"老兄"
 	{
 		"index"		"906"
 		"classes"	"weapon_fiveseven;"
 	}
-	"Flash Out"
+	"閃光投出"
 	{
 		"index"		"905"
 		"classes"	"weapon_tec9;"
 	}
-	"Decommissioned"
+	"已除役"
 	{
 		"index"		"904"
 		"classes"	"weapon_famas;"
 	}
-	"Elite 1.6"
+	"菁英 1.6"
 	{
 		"index"		"903"
 		"classes"	"weapon_elite;"
 	}
-	"Aztec"
+	"阿茲特克 Aztec"
 	{
 		"index"		"902"
 		"classes"	"weapon_m249;"
@@ -205,87 +290,87 @@
 		"index"		"852"
 		"classes"	"weapon_knife_widowmaker;"
 	}
-	"Moonrise"
+	"月出"
 	{
 		"index"		"851"
 		"classes"	"weapon_ump45;"
 	}
-	"Incinegator"
+	"焚鱷"
 	{
 		"index"		"850"
 		"classes"	"weapon_xm1014;"
 	}
-	"Off World"
+	"離世靛痕"
 	{
 		"index"		"849"
 		"classes"	"weapon_p90;"
 	}
-	"Verdigris"
+	"銅鏽"
 	{
 		"index"		"848"
 		"classes"	"weapon_p250;"
 	}
-	"Mischief"
+	"惡趣笑口"
 	{
 		"index"		"847"
 		"classes"	"weapon_mp7;"
 	}
-	"Gauss"
+	"高斯"
 	{
 		"index"		"846"
 		"classes"	"weapon_mp5sd;"
 	}
-	"Momentum"
+	"動量"
 	{
 		"index"		"845"
 		"classes"	"weapon_aug;"
 	}
-	"The Emperor"
+	"皇帝"
 	{
 		"index"		"844"
 		"classes"	"weapon_m4a1;"
 	}
-	"Skull Crusher"
+	"碎顱者"
 	{
 		"index"		"843"
 		"classes"	"weapon_revolver;"
 	}
-	"Akoben"
+	"部落斑紋"
 	{
 		"index"		"842"
 		"classes"	"weapon_galilar;"
 	}
-	"Light Rail"
+	"輕軌"
 	{
 		"index"		"841"
 		"classes"	"weapon_deagle;"
 	}
-	"Whitefish"
+	"白鮭"
 	{
 		"index"		"840"
 		"classes"	"weapon_mac10;"
 	}
-	"Bamboozle"
+	"竹子偽裝"
 	{
 		"index"		"839"
 		"classes"	"weapon_tec9;"
 	}
-	"Atheris"
+	"刺鱗樹蝰"
 	{
 		"index"		"838"
 		"classes"	"weapon_awp;"
 	}
-	"Angry Mob"
+	"憤怒暴民"
 	{
 		"index"		"837"
 		"classes"	"weapon_fiveseven;"
 	}
-	"Uncharted"
+	"未知秘境"
 	{
 		"index"		"836"
 		"classes"	"weapon_ak47;"
 	}
-	"Crypsis"
+	"保護色"
 	{
 		"index"		"835"
 		"classes"	"weapon_famas;"
@@ -605,7 +690,7 @@
 		"index"		"724"
 		"classes"	"weapon_ak47;"
 	}
-	"Night Stripe"
+	"夜色斑紋"
 	{
 		"index"		"735"
 		"classes"	"weapon_knife_css;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
@@ -1505,7 +1590,7 @@
 		"index"		"541"
 		"classes"	"weapon_aug;"
 	}
-	"X-Ray"
+	"X 射線"
 	{
 		"index"		"125"
 		"classes"	"weapon_p250;"
