--- a/addons/sourcemod/configs/weapons/weapons_turkish.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_turkish.cfg
@@ -1,26 +1,111 @@
 "Skins"
 {
+	"Bullet Queen"
+	{
+		"index"		"957"
+		"classes"	"weapon_glock;"
+	}
+	"Fever Dream"
+	{
+		"index"		"956"
+		"classes"	"weapon_ssg08;"
+	}
+	"Darkwing"
+	{
+		"index"		"955"
+		"classes"	"weapon_sg556;"
+	}
+	"Enforcer"
+	{
+		"index"		"954"
+		"classes"	"weapon_scar20;"
+	}
+	"Apocalypto"
+	{
+		"index"		"953"
+		"classes"	"weapon_sawedoff;"
+	}
+	"Bone Forged"
+	{
+		"index"		"952"
+		"classes"	"weapon_revolver;"
+	}
+	"Acid Etched"
+	{
+		"index"		"951"
+		"classes"	"weapon_hkp2000;"
+	}
+	"Prototype"
+	{
+		"index"		"950"
+		"classes"	"weapon_negev;"
+	}
+	"Desert Strike"
+	{
+		"index"		"949"
+		"classes"	"weapon_mp5sd;"
+	}
+	"Justice"
+	{
+		"index"		"948"
+		"classes"	"weapon_mag7;"
+	}
+	"Disco Tech"
+	{
+		"index"		"947"
+		"classes"	"weapon_mac10;"
+	}
+	"Player Two"
+	{
+		"index"		"946"
+		"classes"	"weapon_m4a1_silencer;"
+	}
+	"Blue Ply"
+	{
+		"index"		"945"
+		"classes"	"weapon_deagle;"
+	}
+	"Distressed"
+	{
+		"index"		"944"
+		"classes"	"weapon_cz75a;"
+	}
+	"Capillary"
+	{
+		"index"		"943"
+		"classes"	"weapon_awp;"
+	}
+	"Tom Cat"
+	{
+		"index"		"942"
+		"classes"	"weapon_aug;"
+	}
+	"Phantom Disruptor"
+	{
+		"index"		"941"
+		"classes"	"weapon_ak47;"
+	}
 	"Kutlama"
 	{
 		"index"		"919"
 		"classes"	"weapon_famas;"
 	}
-	"Sacrifice"
+	"Fedakârlık"
 	{
 		"index"		"918"
 		"classes"	"weapon_glock;"
 	}
-	"Wildfire"
+	"Yaban Ateşi"
 	{
 		"index"		"917"
 		"classes"	"weapon_awp;"
 	}
-	"Plastique"
+	"Plastik Patlayıcı"
 	{
 		"index"		"916"
 		"classes"	"weapon_ump45;"
 	}
-	"Agent"
+	"Ajan"
 	{
 		"index"		"915"
 		"classes"	"weapon_mp5sd;"
@@ -35,7 +120,7 @@
 		"index"		"913"
 		"classes"	"weapon_aug;"
 	}
-	"Nostalgia"
+	"Nostalji"
 	{
 		"index"		"911"
 		"classes"	"weapon_p90;"
@@ -50,7 +135,7 @@
 		"index"		"909"
 		"classes"	"weapon_mag7;"
 	}
-	"Classic Crate"
+	"Klasik Kutu"
 	{
 		"index"		"908"
 		"classes"	"weapon_mac10;"
@@ -60,17 +145,17 @@
 		"index"		"907"
 		"classes"	"weapon_p250;"
 	}
-	"Buddy"
+	"Dost"
 	{
 		"index"		"906"
 		"classes"	"weapon_fiveseven;"
 	}
-	"Flash Out"
+	"Flaş"
 	{
 		"index"		"905"
 		"classes"	"weapon_tec9;"
 	}
-	"Decommissioned"
+	"Tedavülden Kalkmış"
 	{
 		"index"		"904"
 		"classes"	"weapon_famas;"
@@ -90,7 +175,7 @@
 		"index"		"900"
 		"classes"	"weapon_m249;"
 	}
-	"Bloodshot"
+	"Kan Çanağı"
 	{
 		"index"		"899"
 		"classes"	"weapon_ssg08;"
@@ -130,7 +215,7 @@
 		"index"		"892"
 		"classes"	"weapon_revolver;"
 	}
-	"Black Sand"
+	"Kara Kum"
 	{
 		"index"		"891"
 		"classes"	"weapon_g3sg1;"
@@ -155,12 +240,12 @@
 		"index"		"887"
 		"classes"	"weapon_awp;"
 	}
-	"Arctic Wolf"
+	"Kutup Kurdu"
 	{
 		"index"		"886"
 		"classes"	"weapon_aug;"
 	}
-	"Rat Rod"
+	"Yarış Faresi"
 	{
 		"index"		"885"
 		"classes"	"weapon_ak47;"
@@ -445,17 +530,17 @@
 		"index"		"920"
 		"classes"	"weapon_negev;"
 	}
-	"Stained Glass"
+	"Vitray"
 	{
 		"index"		"867"
 		"classes"	"weapon_mp9;"
 	}
-	"Canal Spray"
+	"Canal Sprey"
 	{
 		"index"		"866"
 		"classes"	"weapon_revolver;"
 	}
-	"Stone Mosaico"
+	"Taş Mozaik"
 	{
 		"index"		"865"
 		"classes"	"weapon_scar20;"
@@ -510,7 +595,7 @@
 		"index"		"738"
 		"classes"	"weapon_tec9;"
 	}
-	"Cinquedea"
+	"Beş Parmak"
 	{
 		"index"		"737"
 		"classes"	"weapon_mag7;"
