--- a/addons/sourcemod/configs/weapons/weapons_english.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_english.cfg
@@ -1,84 +1,89 @@
 "Skins"
-{
-	"Bullet Queen"
+{	
+	"Legion of Anubis"
 	{
-		"index"		"957"
-		"classes"	"weapon_glock;"
+		"index"		"959"
+		"classes"	"weapon_ak47;"
 	}
-	"Enforcer"
+	"Printstream"
 	{
-		"index"		"954"
-		"classes"	"weapon_scar20;"
-	}
-	"Darkwing"
-	{
-		"index"		"955"
-		"classes"	"weapon_sg556;"
-	}
-	"Apocalypto"
-	{
-		"index"		"953"
-		"classes"	"weapon_sawedoff;"
-	}
-	"Born Forged"
-	{
-		"index"		"952"
-		"classes"	"weapon_revolver;"
-	}
-	"Acid Etched"
-	{
-		"index"		"951"
-		"classes"	"weapon_hkp2000;"
-	}
-	"Prototype"
-	{
-		"index"		"950"
-		"classes"	"weapon_negev;"
-	}
-	"Desert Strike"
-	{
-		"index"		"949"
-		"classes"	"weapon_mp5sd;"
-	}
-	"Justice"
-	{
-		"index"		"948"
-		"classes"	"weapon_mag7;"
-	}
-	"Disco Tech"
-	{
-		"index"		"947"
-		"classes"	"weapon_mac10;"
-	}
-	"Player Two"
-	{
-		"index"		"946"
-		"classes"	"weapon_m4a1;"
-	}
-	"Blue Ply"
-	{
-		"index"		"945"
+		"index"		"962"
 		"classes"	"weapon_deagle;"
 	}
-	"Distressed"
+	"Tooth Fairy"
 	{
-		"index"		"944"
-		"classes"	"weapon_cz75a;"
+		"index"		"971"
+		"classes"	"weapon_m4a1;"
 	}
-	"Capillary"
+	"Vogue"
 	{
-		"index"		"943"
-		"classes"	"weapon_awp;"
+		"index"		"963"
+		"classes"	"weapon_glock;"
 	}
-	"Tom Cat"
+	"Entombed"
 	{
-		"index"		"942"
-		"classes"	"weapon_aug;"
+		"index"		"970"
+		"classes"	"weapon_xm1014;"
 	}
-	"Phantom Disruptor"
+	"Monster Call"
 	{
-		"index"		"941"
-		"classes"	"weapon_ak47;"
+		"index"		"961"
+		"classes"	"weapon_mag7;"
+	}
+	"Brother"
+	{
+		"index"		"964"
+		"classes"	"weapon_tec9;"
+	}
+	"Allure"
+	{
+		"index"		"965"
+		"classes"	"weapon_mac10;"
+	}
+	"Connexion"
+	{
+		"index"		"972"
+		"classes"	"weapon_galil;"
+	}
+	"Kitbash"
+	{
+		"index"		"974"
+		"classes"	"weapon_mp5sd;"
+	}
+	"Gnarled"
+	{
+		"index"		"960"
+		"classes"	"weapon_hkp2000;"
+	}
+	"Freight"
+	{
+		"index"		"969"
+		"classes"	"weapon_p90;"
+	}
+	"Cassette"
+	{
+		"index"		"968"
+		"classes"	"weapon_p250;"
+	}
+	"Mainframe 001"
+	{
+		"index"		"967"
+		"classes"	"weapon_ssg08;"
+	}
+	"Ultralight"
+	{
+		"index"		"958"
+		"classes"	"weapon_negev;"
+	}
+	"Ol' Rusty"
+	{
+		"index"		"966"
+		"classes"	"weapon_sg556;"
+	}
+	"Runic"
+	{
+		"index"		"973"
+		"classes"	"weapon_bizon;"
 	}
 	"Commemoration"
 	{
