--- a/cfg/sourcemod/weapons.cfg
+++ b/cfg/sourcemod/weapons.cfg
@@ -44,12 +44,12 @@ sm_weapons_float_increment_size "0.05"
 // Grace period in terms of seconds counted after round start for allowing the use of !ws command. 0 means no restrictions
 // -
 // Default: "0"
-sm_weapons_grace_period 0
+sm_weapons_grace_period "0"
 
 // Number of days before a player (SteamID) is marked as inactive and his data is deleted. (0 or any negative value to disable deleting)
 // -
 // Default: "30"
-sm_weapons_inactive_days 30
+sm_weapons_inactive_days "30"
 
 // 0: All knives have same StatTrak counter 1: Each type of knife has its separate StatTrak counter
 // -
